<resources>
    <string name="app_name">FamilyPedia</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="already_have_an_account_log_in">Already have an account? Login</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="for_your_safty">For your safety to create your first biography you must enter your credentials</string>
    <string name="enter_name">Enter name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_reset_your_password_please_enter_the_email_used_to_register_your_account">To reset your password, please enter the email used to register your account.</string>
    <string name="send_password_reset_link">Send Password Reset Link</string>
    <string name="password_reset_link_not_received_resend">Password reset link not received? Resend</string>
    <string name="n_a">N/A</string>
    <string name="close">Close</string>
    <string name="dialog_desc_signup">If the address you entered is registered
to an active account, you will receive
an email with instructions to reset
your password.</string>
    <string name="password_link_sent">Password Link Sent</string>
    <string name="email_verification">Email Verification</string>
    <string name="email_already_registered">Email Already Registered</string>
    <string name="phone_number_already_registered">Phone Number Already Registered</string>
    <string name="phone_number_not_functional">Mobile registration is not functional</string>
    <string name="your_email_already_registered">Your email id is already registered.</string>
    <string name="your_phone_number_already_registered">Your Phone Number is already registered.</string>
    <string name="your_phone_number_not_working">This is not functional right now .</string>
    <string name="blocked">Blocked</string>
    <string name="inActive">InActive</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="blocked_desc">You have been blocked by admin.</string>
    <string name="not_verified">Verification Alert</string>
    <string name="email_verification_desc">Email verification link sent to your email
id. To proceed, please click the
verification link in the email.</string>
    <string name="resend">Resend</string>
    <string name="resend_success">Resend Link Successful.</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_success">Your password has been reset successfully. Please login with new password</string>
    <string name="set_your_new_password_below">Set your new password below.</string>
    <string name="profile">Profile</string>
    <string name="characters">Biographies</string>
    <string name="search">Search</string>
    <string name="search_friends">Search Users</string>
    <string name="search_character">Search Biography</string>
    <string name="tap_to_search_character">Tap to search biography</string>
    <string name="tap_to_search_friends">Tap to search friends</string>
    <string name="friends">Users</string>
    <string name="home">Home</string>
    <string name="yes">Yes</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="no_data_avaliable_new_description">Create or search your first biography</string>
    <string name="no_data_avaliable_new_title">no data available</string>
    <string name="view_profile">View Profile</string>
    <string name="friend_detail">Friend Detail</string>
    <string name="user_detail">User Detail</string>
    <string name="tv_user">User </string>
    <string name="request_pending">Request Pending</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favourite_characters">Favourite Biographies</string>
    <string name="post_permissions">Post Permissions</string>
    <string name="information">Information</string>
    <string name="about_us">About us</string>
    <string name="about_character">About Biography</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tv_delete_account">Delete Your Account</string>
    <string name="tv_delete_accounts">Delete Account</string>
    <string name="not_available">No %1$s  Available</string>
    <string name="photo">Photo</string>
    <string name="gender">Gender</string>
    <string name="event_type">Event Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="d_o_b">Date of birth</string>
    <string name="d_o_b_">Date of birth :</string>
    <string name="d_o_d">Date of death</string>
    <string name="d_o_d_">Date of death :</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="permissions">Permissions</string>
    <string name="request_post_permissions">Request permission to access</string>
    <string name="permission_requested">Access permission requested</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="notifications">Notifications</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="select_gender">Select Gender</string>
    <string name="select">Select</string>
    <string name="select_dob">Select Date Of Birth</string>
    <string name="select_from">Select From</string>
    <string name="select_date">Select Date</string>
    <string name="select_to">Select To</string>
    <string name="select_dod">Select Date Of Death</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="tv_password">Password</string>
    <string name="tv_confirm_account">Confirm that this is your Account </string>
    <string name="tv_confirm_account_deleted_success_popup">Your account has been deleted successfully</string>
    <string name="tv_account_delete_popup">Are you sure you want to delete the Account? This action can not be undone. </string>
    <string name="tv_confirm_delete_account_description">Before you permanently delete your Account,\n please enter your password. </string>
    <string name="new_password">New Password</string>
    <string name="enter_confirm_new_password">Enter Confirm New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="add_new_character">Add new biography</string>
    <string name="add_new_character_">Add New Biography</string>
    <string name="edit_character">Edit Biography</string>
    <string name="new_character">New biography</string>
    <string name="character_name">Biography name</string>
    <string name="character_created">Biography created successfully</string>
    <string name="enter_character_name">Enter Biography Name</string>
    <string name="continue_">Continue</string>
    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="no_data_available">No data available</string>
    <string name="no_post_available">No New Post Available</string>
    <string name="remember_to_create">No new bio available </string>
    <string name="no_biographies">You have no favourite biographies.</string>
    <string name="no_biographie"> No Biographies Available</string>
    <string name="let_s_quickly_search_if_the_character_you_want">Let\'s quickly search if the biography you want to create already exists.</string>
    <string name="error_name">Please enter name</string>
    <string name="error_email_empty">Please enter email</string>
    <string name="error_email_invalid">Please enter valid email</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="error_new_password_empty">Please enter new password</string>
    <string name="error_password_invalid">Password must contain at least 8 characters</string>
    <string name="error_confirm_password_empty">Please enter confirm password</string>
    <string name="error_confirm_password_unmatch">Confirm password must be same as password</string>
    <string name="error_tnc">You must accept Terms and Conditions</string>
    <string name="error_character_status">Please select biography status</string>
    <string name="error_gender">Please select gender</string>
    <string name="error_starting_date">Please select starting date</string>
    <string name="error_ending_date">Please select ending date</string>
    <string name="error_location">Please enter event location</string>
    <string name="error_phone">Please select valid phone number</string>
    <string name="error_dob">Please select date of birth</string>
    <string name="error_dod">Please select date of death</string>
    <string name="error_city_of_birth">Please enter city of birth</string>
    <string name="error_country_of_birth">Please enter country of birth</string>
    <string name="error_event">Please select event type</string>
    <string name="error_description">Please select event description</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="name_">Name :</string>
    <string name="from_">From</string>
    <string name="to_">To</string>
    <string name="post_gallery">Post Gallery</string>
    <string name="attach_post_photo">Attach Post Photo</string>
    <string name="delete">Delete</string>
    <string name="delete_bio">Delete Bio</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="crop_photo">Crop Photo</string>
    <string name="phone_number_verified">Phone number verified!</string>
    <string name="you_have_successfully_verified_your_phone_number">You have successfully verified your phone number</string>
    <string name="share">Share the bio by WhatsApp</string>
</resources>