<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <com.familypedia.utils.MediumTextViewGoldPlay
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/edit"
        android:layout_gravity="start|center"
        android:textSize="@dimen/sp_14"/>

    <com.familypedia.utils.MediumTextViewGoldPlay
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/delete"
        android:layout_gravity="start|center"
        android:textSize="@dimen/sp_14"/>

    <com.familypedia.utils.MediumTextViewGoldPlay
        android:id="@+id/tvReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/report"
        android:layout_gravity="start|center"
        android:textSize="@dimen/sp_14"/>

</LinearLayout>