<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/clParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.dashboard.character.post.AddNewPostActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_15" />

        <include
            android:id="@+id/toolbarAddNewPost"
            layout="@layout/layout_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart" />

        <com.familypedia.utils.SemiBoldTextViewGoldPlay
            android:id="@+id/tvNameStatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/name_"
            android:textColor="@color/color_jumbo"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/toolbarAddNewPost" />

        <com.familypedia.utils.SemiBoldTextViewGoldPlay
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/n_a"
            android:textColor="@color/color_ebony"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/tvNameStatic"
            app:layout_constraintStart_toEndOf="@id/tvNameStatic"
            app:layout_constraintTop_toTopOf="@id/tvNameStatic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEvent"
            style="@style/TextInputLayoutSpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/event_type"
            android:textColorHint="@color/color_text_input_layout_hint"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvNameStatic"
            app:placeholderText="@string/select"

            >

            <AutoCompleteTextView
                android:id="@+id/spinnerEvent"
                style="@style/AutoCompleteTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="none"
                android:padding="@dimen/dp_10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFrom"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/from_"
            android:textColorHint="@color/color_text_input_layout_hint"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilEvent"
            app:placeholderText="@string/select_from">
            <!-- app:placeholderText="@string/enter_email"-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_calendar"
                android:editable="false"
                android:focusable="false"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/dp_15"
                android:singleLine="true"
                android:textColor="@color/black_light"
                android:textSize="@dimen/sp_13" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTo"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/to_"
            android:textColorHint="@color/color_text_input_layout_hint"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilFrom"
            app:placeholderText="@string/select_to">
            <!-- app:placeholderText="@string/enter_email"-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_calendar"
                android:editable="false"
                android:focusable="false"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/dp_15"
                android:singleLine="true"
                android:textColor="@color/black_light"
                android:textSize="@dimen/sp_13" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLocation"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:hint="@string/location"
            android:textColorHint="@color/color_text_input_layout_hint"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilTo"
            app:placeholderText="@string/enter_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/dp_15"
                android:singleLine="true"
                android:textColor="@color/black_light"
                android:textSize="@dimen/sp_13" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:hint="@string/description"
            android:textColorHint="@color/color_text_input_layout_hint"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilLocation"
            app:placeholderText="@string/enter_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:gravity="start|top"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:paddingHorizontal="@dimen/dp_15"
                android:textColor="@color/black_light"
                android:textSize="@dimen/sp_13" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.familypedia.utils.SemiBoldTextViewGoldPlay
            android:id="@+id/tvPostGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/post_gallery"
            android:textColor="@color/color_ebony"

            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tilDescription" />

        <com.familypedia.utils.MediumTextViewGoldPlay
            android:id="@+id/btnAttachPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_border"
            android:drawablePadding="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/attach_post_photo"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_14"
            app:drawableStartCompat="@drawable/ic_attach"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvPostGallery" />

        <com.familypedia.utils.MediumTextViewGoldPlay
            android:id="@+id/btnCrop"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_border"
            android:drawablePadding="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/crop_photo"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@id/btnAttachPhoto"
            app:layout_constraintTop_toBottomOf="@id/tvPostGallery" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPhotos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/btnAttachPhoto" />

        <include
            layout="@layout/layout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLay"
            android:layout_marginBottom="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/rvPhotos" />

        <ProgressBar
            android:id="@+id/progressRemoveImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>