<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="@dimen/dp_40"
    android:layout_marginHorizontal="@dimen/dp_15"
    android:background="@drawable/bg_shape_dialog">


    <com.familypedia.utils.MediumTextViewGoldPlay
        android:id="@+id/tvTitleConfirmation2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/n_a"
        android:textColor="@color/color_jumbo"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.familypedia.utils.SemiBoldTextViewGoldPlay
        android:id="@+id/btnYes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_15"
        android:text="@string/yes"
        android:paddingHorizontal="@dimen/dp_45"
        android:paddingVertical="@dimen/dp_12"
        android:background="@drawable/bg_shape_button_semi_rect"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmation2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnNo2"
        />
    <com.familypedia.utils.SemiBoldTextViewGoldPlay
        android:id="@+id/btnNo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_15"
        android:text="@string/no"
        android:paddingHorizontal="@dimen/dp_45"
        android:paddingVertical="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_10"
        android:backgroundTint="@color/color_grey"
        android:background="@drawable/bg_shape_button_semi_rect"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmation2"
        app:layout_constraintStart_toEndOf="@id/btnYes2"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>