<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/dp_30"
    android:background="@drawable/bg_shape_dialog"
    android:padding="@dimen/dp_30">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_done_updated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.familypedia.utils.BoldTextViewGoldPlay
        android:id="@+id/tvTitlePhoneVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/phone_number_verified"
        android:textColor="@color/color_ebony"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDone" />

    <com.familypedia.utils.RegularTextViewGoldPlay
        android:id="@+id/tvDialogMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/you_have_successfully_verified_your_phone_number"
        android:textColor="@color/color_jumbo"
        android:textSize="@dimen/sp_15"
        android:textAlignment="center"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitlePhoneVerify" />

    <com.familypedia.utils.BoldTextViewGoldPlay
        android:id="@+id/btnCloseDialog"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:text="@string/close"
        android:textColor="@color/color_picton_blue"
        android:textSize="@dimen/sp_15"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogMsg"

        />

</androidx.constraintlayout.widget.ConstraintLayout>